c4prj2_input/grade.txt
Grading at Tue Mar  9 11:56:19 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:23:50: error: invalid operands to binary == (have ‘deck_t {aka struct deck_tag}’ and ‘void *’)
     if(fc->decks[i].n_cards == 0 || fc->decks[i] == NULL) continue;
                                                  ^
Compilation of future.c failed

Overall Grade: F
